--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "hardhat": "^2.12.4"
   },
   "dependencies": {
-    "@axelar-network/axelar-cgp-solidity": "^4.3.1"
+    "@axelar-network/axelar-cgp-solidity": "^4.3.1",
+    "@openzeppelin/contracts": "^4.8.0",
+    "i": "^0.3.7",
+    "npm": "^9.2.0"
   }
 }
