--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@axelar-network/axelar-cgp-solidity": "^4.3.1",
     "@openzeppelin/contracts": "^4.8.0",
+    "@openzeppelin/contracts-upgradeable": "^4.8.0",
+    "hardhat-deploy": "^0.11.22",
     "i": "^0.3.7",
     "npm": "^9.2.0"
   }
