--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.12.4"
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "fs": "^0.0.1-security",
+    "hardhat": "^2.12.4",
+    "path": "^0.12.7"
   },
   "dependencies": {
     "@axelar-network/axelar-cgp-solidity": "^4.3.1",
