--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "hardhat-project",
+  "name": "cross-chain-dao",
+  "scripts": {
+    "sizer": "npx hardhat size-contracts"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "hardhat-contract-sizer": "^2.6.1",
     "fs": "^0.0.1-security",
     "hardhat": "^2.12.4",
     "path": "^0.12.7"
