--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
-    "hardhat-contract-sizer": "^2.6.1",
     "fs": "^0.0.1-security",
     "hardhat": "^2.12.4",
+    "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-deploy": "^0.11.22",
     "path": "^0.12.7"
   },
   "dependencies": {
     "@axelar-network/axelar-cgp-solidity": "^4.3.1",
     "@openzeppelin/contracts": "^4.8.0",
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
-    "hardhat-deploy": "^0.11.22",
-    "i": "^0.3.7",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "npm": "^9.2.0"
   }
 }
