--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "fs": "^0.0.1-security",
-    "hardhat": "^2.12.4",
+    "hardhat": "2.12.6",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.11.22",
     "path": "^0.12.7"
