--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "cross-chain-dao",
   "scripts": {
-    "sizer": "npx hardhat size-contracts"
+    "sizer": "npx hardhat size-contracts",
+    "ftmvote": "npx hardhat vote --network fantom-testnet --support 1",
+    "collect": "npx hardhat requestCollection --network moonbase"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
